src/objects/LAB_Mirror_Result__c.object
<CustomObject>
    <fields>
        <fullName>Kind__c</fullName>
        <label>Kind</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>created__c</fullName>
        <label>created</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>etag__c</fullName>
        <label>etag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>id__c</fullName>
        <label>id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>text__c</fullName>
        <label>text</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>updated__c</fullName>
        <label>updated</label>
        <type>DateTime</type>
    </fields>
    <label>LAB Mirror Result</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LMR-{0000000}</displayFormat>
        <label>LAB_Mirror_Result Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LAB Mirror Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>